[package]
name = "cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "*"
strum = { version = "*", features = ["derive"] }
peck-lib = { git = "https://github.com/alexipeck/peck-lib.git", features = ["crypto"] }#path = "/home/me/projects/peck-lib"
tokio = {version = "*", features = ["full"]}